--- a/contact.html
+++ b/contact.html
@@ -112,34 +112,35 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">Contato</div>
                     <h1 class="display-6 mb-5">Se você tiver alguma dúvida, entre em contato conosco</h1>
-                    <form>
+                    <form action="https://formsubmit.co/lhenrique.lh000@gmail.com" method="POST">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                    <input type="text" class="form-control" name="name" id="name" placeholder="Your Name">
                                     <label for="name">Seu nome</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email">
                                     <label for="email">Seu Email</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                    <input type="text" class="form-control" name="_subject" id="subject" placeholder="Subject">
                                     <label for="subject">Assunto</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                    <textarea class="form-control" name="message" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
                                     <label for="message">Mensagem</label>
                                 </div>
                             </div>
+                            <input type="hidden" name="_next" value="http://127.0.0.1:5500/index.html">
                             <div class="col-12">
-                                <button class="btn btn-primary py-2 px-3 me-3">
+                                <button class="btn btn-primary py-2 px-3 me-3" type="submit">
                                     Envie a mensagem
                                     <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                         <i class="fa fa-arrow-right"></i>
