feat: ajuste msg retorno

--- a/contact.html
+++ b/contact.html
@@ -139,6 +139,8 @@
                                 </div>
                             </div>
                             <input type="hidden" name="_next" value="http://127.0.0.1:5500/index.html">
+                            <input type="hidden" name="_autoresponse" value="Obrigado por entrar em contato com a NortTec! Iremos avaliar a sua solicitação e responderemos logo logo.">
+                            <input type="hidden" name="_template" value="table">
                             <div class="col-12">
                                 <button class="btn btn-primary py-2 px-3 me-3" type="submit">
                                     Envie a mensagem
