--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link rel="icon" href="img/logo_norte.jpg">
+    <link rel="icon" href="img/norte-tec.png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -55,15 +55,12 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0">Norte<span class="text-white">Tec</span></h1>
-            </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link active">Início</a>
+                    <a href="index.html" class="nav-item nav-link">Início</a>
                     <a href="about.html" class="nav-item nav-link">Sobre</a>
                     <a href="customers.html" class="nav-item nav-link">Clientes</a>
                     <div class="nav-item dropdown">
@@ -72,6 +69,7 @@
                             <a href="#" class="dropdown-item">Aluguel</a>
                             <a href="#" class="dropdown-item">Tomath</a>
                             <a href="#" class="dropdown-item">App Finanças</a>
+                            <a href="#" class="dropdown-item">Form</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contato</a>
@@ -95,14 +93,14 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/logo_norte.jpg" alt="Image" height="700px">
+                    <img class="w-100" src="img/logo_norte.png" alt="Image" height="700px">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7 pt-5">
                                     <h1 class="display-4 text-white mb-3 animated slideInDown">ESSA É A HORA DE VOCÊ CRESCER!</h1>
                                     <p class="fs-5 text-white-50 mb-5 animated slideInDown">Comece agora a mudar a história da sua vida e da sua empresa!</p>
-                                    <a class="btn btn-primary py-2 px-3 animated slideInDown" href="">
+                                    <a class="btn btn-outline-primary py-2 px-3 animated slideInDown" href="">
                                         Ver mais
                                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                             <i class="fa fa-arrow-right"></i>
@@ -122,7 +120,7 @@
                                     <h1 class="display-4 text-white mb-3 animated slideInDown">Aluguel</h1>
                                     <h2 class="display-3 text-white mb-3 animated slideInDown">Gerencie seus imóveis com facilidade e rapidez</h2>
                                     <p class="fs-5 text-white-50 mb-5 animated slideInDown">Aloque inquilinos em seus imóveis, gerencie os pagamentos e mais!</p>
-                                    <a class="btn btn-primary py-2 px-3 animated slideInDown" href="">
+                                    <a class="btn btn-outline-primary py-2 px-3 animated slideInDown" href="">
                                         Ver mais
                                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                             <i class="fa fa-arrow-right"></i>
@@ -142,7 +140,7 @@
                                     <h1 class="display-4 text-white mb-3 animated slideInDown">Tomath</h1>
                                     <h2 class="display-3 text-white mb-3 animated slideInDown">Aprenda Matemática em instantes</h2>
                                     <p class="fs-5 text-white-50 mb-5 animated slideInDown">Aprenda com professores reais sem sair de casa!</p>
-                                    <a class="btn btn-primary py-2 px-3 animated slideInDown" href="">
+                                    <a class="btn btn-outline-primary py-2 px-3 animated slideInDown" href="">
                                         Ver mais
                                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                             <i class="fa fa-arrow-right"></i>
@@ -162,7 +160,7 @@
                                     <h1 class="display-4 text-white mb-3 animated slideInDown">App Finanças</h1>
                                     <h2 class="display-3 text-white mb-3 animated slideInDown">Controle suas finanças na palma da sua mão.</h2>
                                     <p class="fs-5 text-white-50 mb-5 animated slideInDown">Receba e faça pagamentos em seu celular!</p>
-                                    <a class="btn btn-primary py-2 px-3 animated slideInDown" href="">
+                                    <a class="btn btn-outline-primary py-2 px-3 animated slideInDown" href="">
                                         Ver mais
                                         <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                             <i class="fa fa-arrow-right"></i>
@@ -195,7 +193,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100 pt-5 pe-5" src="img/sobre-1.jpg" alt="" style="object-fit: cover;">                        
+                        <img class="position-absolute w-100 h-100 pt-5 pe-5" src="img/sobre-1.jpg" alt="" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -207,15 +205,15 @@
                             <span class="text-primary">Elbert Nilton, Fundador</span>
                         </div>
                         <p class="mb-5">Entre em contato ou veja mais sobre nós e o modelo de desenvovimento que adotamos!</p>
-                        <a class="btn btn-primary py-2 px-3 me-3" href="">
+                        <a class="btn btn-outline-primary py-2 px-3 me-3" href="">
                             Ver mais
                             <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
                             </div>
                         </a>
-                        <a class="btn btn-outline-primary py-2 px-3" href="contact.html">
+                        <a class="btn btn-outline-primary py-2 px-3 me-3" href="contact.html">
                             Contate-nos
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                            <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
                             </div>
                         </a>
@@ -239,14 +237,14 @@
                         <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/cliente-1.png" style="width: 100px; height: 100px;">
                     </a>
                     <div class="customers-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Coca Cola</h5>
+                        <p>Deputada Federal/PA 162.208, Ex-Secretária de estado Pará, Deputada Estadual de 2019 a 2022</p>
+                        <h5 class="mb-1">Dep. Renilce Nicodemos</h5>
                     </div>
                 </div>
                 <div class="customers-item text-center">
                     <a href="https://www.nike.com.br/" target="_blank">
                         <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/clientes-2.png" style="width: 100px; height: 100px;">
-                    </a>               
+                    </a>
                     <div class="customers-text rounded text-center p-4">
                         <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
                         <h5 class="mb-1">Nike</h5>
@@ -255,7 +253,7 @@
                 <div class="customers-item text-center">
                     <a href="https://www.amazon.com.br/" target="_blank">
                         <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/cliente-3.png" style="width: 100px; height: 100px;">
-                    </a>                   
+                    </a>
                     <div class="customers-text rounded text-center p-4">
                         <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
                         <h5 class="mb-1">Amazon</h5>
@@ -371,6 +369,38 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
+                        <div class="text-center p-4 pt-0">
+                            <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
+                                <small>Form</small>
+                            </div>
+                            <h5 class="mb-3">Tenha um formulario completo para o seu eleitorado</h5>
+                            <p>Facíl de usar e super completo</p>
+                            <div class="causes-progress bg-light p-3 pt-2">
+                                <div class="d-flex justify-content-center">
+                                    <p class="text-dark">100% <small class="text-body">Concluído</small></p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                                        <span>100%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/form-banner.png" alt="">
+                            <div class="causes-overlay">
+                                <a class="btn btn-outline-primary" href="">
+                                    Ver mais
+                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                        <i class="fa fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -470,7 +500,7 @@
                     <p>Fique por dentro das novidades da NorteTec</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Seu Email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Inscreva-se</button>
+                        <button type="button" class="btn btn-outline-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Inscreva-se</button>
                     </div>
                 </div>
             </div>
@@ -493,7 +523,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="#" class="btn btn-lg btn-dark btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
