refactor: ajustando imagem e incluindo porjetos

--- a/404.html
+++ b/404.html
@@ -9,12 +9,12 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link rel="icon" href="img/norte-tec.png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -72,6 +72,7 @@
                         <a href="#" class="dropdown-item">Aluguel</a>
                         <a href="#" class="dropdown-item">Tomath</a>
                         <a href="#" class="dropdown-item">App Finanças</a>
+                        <a href="#" class="dropdown-item">Form</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contato</a>
@@ -127,7 +128,7 @@
         </div>
     </div>
     <!-- 404 End -->
-        
+
 
      <!-- Footer Start -->
      <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
