--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link rel="icon" href="img/logo_norte.jpg">
+    <link rel="icon" href="img/norte-tec.png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,16 +59,13 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0">Norte<span class="text-white">Tec</span></h1>
-            </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link active">Início</a>
+                    <a href="index.html" class="nav-item nav-link">Início</a>
                     <a href="about.html" class="nav-item nav-link">Sobre</a>
                     <a href="customers.html" class="nav-item nav-link">Clientes</a>
                     <div class="nav-item dropdown">
@@ -77,6 +74,7 @@
                             <a href="#" class="dropdown-item">Aluguel</a>
                             <a href="#" class="dropdown-item">Tomath</a>
                             <a href="#" class="dropdown-item">App Finanças</a>
+                            <a href="#" class="dropdown-item">Form</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contato</a>
@@ -105,7 +103,7 @@
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="index.html">Início</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Sobre nós</li>
+                    <li class="breadcrumb-item text-secondary" aria-current="page">Sobre nós</li>
                 </ol>
             </nav>
         </div>
@@ -137,7 +135,7 @@
                         </div>
                         <p class="mb-5">Entre em contato ou veja mais sobre nós e o modelo de desenvovimento que
                             adotamos!</p>
-                        <a class="btn btn-primary py-2 px-3 me-3" href="">
+                        <a class="btn btn-outline-primary py-2 px-3 me-3" href="">
                             Ver mais
                             <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
@@ -145,7 +143,7 @@
                         </a>
                         <a class="btn btn-outline-primary py-2 px-3" href="contact.html">
                             Contate-nos
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                            <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
                             </div>
                         </a>
@@ -261,7 +259,7 @@
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
                             placeholder="Seu Email">
                         <button type="button"
-                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Inscreva-se</button>
+                            class="btn btn-outline-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Inscreva-se</button>
                     </div>
                 </div>
             </div>
@@ -284,7 +282,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="#" class="btn btn-lg btn-dark btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
