--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link rel="icon" href="img/logo_norte.jpg">
+    <link rel="icon" href="img/norte-tec.png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -54,15 +54,12 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0">Norte<span class="text-white">Tec</span></h1>
-            </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link active">Início</a>
+                    <a href="index.html" class="nav-item nav-link">Início</a>
                     <a href="about.html" class="nav-item nav-link">Sobre</a>
                     <a href="customers.html" class="nav-item nav-link">Clientes</a>
                     <div class="nav-item dropdown">
@@ -71,6 +68,7 @@
                             <a href="#" class="dropdown-item">Aluguel</a>
                             <a href="#" class="dropdown-item">Tomath</a>
                             <a href="#" class="dropdown-item">App Finanças</a>
+                            <a href="#" class="dropdown-item">Form</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contato</a>
@@ -97,7 +95,7 @@
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Início</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Contato</li>
+                    <li class="breadcrumb-item text-secondary" aria-current="page">Contato</li>
                 </ol>
             </nav>
         </div>
@@ -142,7 +140,7 @@
                             <input type="hidden" name="_autoresponse" value="Obrigado por entrar em contato com a NortTec! Iremos avaliar a sua solicitação e responderemos logo logo.">
                             <input type="hidden" name="_template" value="table">
                             <div class="col-12">
-                                <button class="btn btn-primary py-2 px-3 me-3" type="submit">
+                                <button class="btn btn-outline-primary py-2 px-3 me-3" type="submit">
                                     Envie a mensagem
                                     <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                         <i class="fa fa-arrow-right"></i>
@@ -200,7 +198,7 @@
                 <p>Fique por dentro das novidades da NorteTec</p>
                 <div class="position-relative mx-auto" style="max-width: 400px;">
                     <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Seu Email">
-                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Inscreva-se</button>
+                    <button type="button" class="btn btn-outline-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Inscreva-se</button>
                 </div>
             </div>
         </div>
@@ -223,7 +221,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="#" class="btn btn-lg btn-dark btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
