--- a/customers.html
+++ b/customers.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link rel="icon" href="img/logo_norte.jpg">
+    <link rel="icon" href="img/norte-tec.png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,16 +59,13 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="fw-bold text-primary m-0">Norte<span class="text-white">Tec</span></h1>
-            </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
-                    <a href="index.html" class="nav-item nav-link active">Início</a>
+                    <a href="index.html" class="nav-item nav-link">Início</a>
                     <a href="about.html" class="nav-item nav-link">Sobre</a>
                     <a href="customers.html" class="nav-item nav-link">Clientes</a>
                     <div class="nav-item dropdown">
@@ -77,6 +74,7 @@
                             <a href="#" class="dropdown-item">Aluguel</a>
                             <a href="#" class="dropdown-item">Tomath</a>
                             <a href="#" class="dropdown-item">App Finanças</a>
+                            <a href="#" class="dropdown-item">Form</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contato</a>
@@ -105,7 +103,7 @@
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Clientes</li>
+                    <li class="breadcrumb-item text-secondary active" aria-current="page">Clientes</li>
                 </ol>
             </nav>
         </div>
@@ -127,10 +125,8 @@
                             style="width: 100px; height: 100px;">
                     </a>
                     <div class="customers-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna
-                            ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea
-                            clita.</p>
-                        <h5 class="mb-1">Coca Cola</h5>
+                        <p>Deputada Federal/PA 162.208, Ex-Secretária de estado Pará, Deputada Estadual de 2019 a 2022</p>
+                        <h5 class="mb-1">Dep. Renilce Nicodemos</h5>
                     </div>
                 </div>
                 <div class="customers-item text-center">
@@ -197,7 +193,7 @@
                     <p>Fique por dentro das novidades da NorteTec</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Seu Email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Inscreva-se</button>
+                        <button type="button" class="btn btn-outline-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Inscreva-se</button>
                     </div>
                 </div>
             </div>
@@ -220,7 +216,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <a href="#" class="btn btn-lg btn-dark btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
