feat: alterando title do 404 e removendo clientes

--- a/customers.html
+++ b/customers.html
@@ -120,37 +120,13 @@
             </div>
             <div class="owl-carousel customers-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="customers-item text-center">
-                    <a href="https://www.coca-cola.com.br/" target="_blank">
+                    <a href="#" target="_blank">
                         <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/cliente-1.png"
                             style="width: 100px; height: 100px;">
                     </a>
                     <div class="customers-text rounded text-center p-4">
                         <p>Deputada Federal/PA 162.208, Ex-Secretária de estado Pará, Deputada Estadual de 2019 a 2022</p>
                         <h5 class="mb-1">Dep. Renilce Nicodemos</h5>
-                    </div>
-                </div>
-                <div class="customers-item text-center">
-                    <a href="https://www.nike.com.br/" target="_blank">
-                        <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/clientes-2.png"
-                            style="width: 100px; height: 100px;">
-                    </a>
-                    <div class="customers-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna
-                            ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea
-                            clita.</p>
-                        <h5 class="mb-1">Nike</h5>
-                    </div>
-                </div>
-                <div class="customers-item text-center">
-                    <a href="https://www.amazon.com.br/" target="_blank">
-                        <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/cliente-3.png"
-                            style="width: 100px; height: 100px;">
-                    </a>
-                    <div class="customers-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna
-                            ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea
-                            clita.</p>
-                        <h5 class="mb-1">Amazon</h5>
                     </div>
                 </div>
             </div>
@@ -206,7 +182,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Projetado por <a href="#">NorteTec</a>
+                        By <a href="#">NorteTec</a>
                     </div>
                 </div>
             </div>
