--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>NorteTe</title>
+    <title>NorteTec</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Projetado por <a href="#">NorteTec</a>
+                        By <a href="#">NorteTec</a>
                     </div>
                 </div>
             </div>
