--- a/about.html
+++ b/about.html
@@ -272,7 +272,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Projetado por <a href="#">NorteTec</a>
+                        By <a href="#">NorteTec</a>
                     </div>
                 </div>
             </div>
